rnsc/tests/snapshots/error-parser-method_directive-access_flags-interface.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MethodWithInterfaceFlag
.super java/lang/Object

.method interface main ()V
.method_end
.class_end
----- STDERR -----
[E-016] Error: invalid method access flag 'interface'
   ╭─[ test_data/integration/error/parser/method_directive/access_flags/interface.rns:4:9 ]
   │
 4 │ .method interface main ()V
   │         ────┬────  
   │             ╰────── 'interface' is not a valid method access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-016
───╯
----- HASH -----
not generated
