rnsc/tests/snapshots/error-parser-method_directive-access_flags-module.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MethodWithModuleFlag
.super java/lang/Object

.method module main ()V
.method_end
.class_end
----- STDERR -----
[E-016] Error: invalid method access flag 'module'
   ╭─[ test_data/integration/error/parser/method_directive/access_flags/module.rns:4:9 ]
   │
 4 │ .method module main ()V
   │         ───┬──  
   │            ╰──── 'module' is not a valid method access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-016
───╯
----- HASH -----
not generated
