rnsc/tests/snapshots/error-parser-method_directive-missing_descriptor.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MissingMethodDescriptor
.super java/lang/Object

.method main
.method_end
.class_end
----- STDERR -----
[E-020] Error: missing method descriptor after '.method'
   ╭─[ test_data/rns_integration/error/parser/method_directive/missing_descriptor.rns:4:9 ]
   │
 4 │ .method main
   │         ──┬─│ 
   │           ╰─── the '.method' directive requires a method descriptor as operand
   │             │ 
   │             ╰─ but method descriptor is missing
   │ 
   │ Help: Provide a method descriptor after the method name, e.g.:
   │       .method main ()V
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- HASH -----
not generated
