rnsc/tests/snapshots/error-parser-method_directive-missing_method_end.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class MissingMethodEnd
.super java/lang/Object

.method main ()V
    .code stack 1 locals 0
      return
    .code_end
.method_end
.class_end
----- INPUT -----
.class MissingMethodEnd
.super java/lang/Object

.method main ()V
  .code stack 1 locals 0
    return
  .code_end
----- STDERR -----

----- HASH -----
11b5ae9e1beaa1dbfc5bca8a510152df5736a6069efe84ffc6aad73ab2d7f742
