rnsc/tests/snapshots/error-parser-method_directive-missing_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MissingMethodName
.super java/lang/Object

.method
.method_end
.class_end
----- STDERR -----
[E-020] Error: missing method name after '.method'
   ╭─[ test_data/rns_integration/error/parser/method_directive/missing_name.rns:4:1 ]
   │
 4 │ .method
   │ ───┬───│ 
   │    ╰───── the '.method' directive requires a method name as operand
   │        │ 
   │        ╰─ but method name is missing
   │ 
   │ Help: Provide a method name after the '.method' directive, e.g.:
   │       .method main ()V
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- JAVAP -----
not generated
