rnsc/tests/snapshots/error-parser-method_directive-trailing_tokens_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after trailing tokens error and reports subsequent errors
; Expected errors: E-015 (trailing tokens), E-007 (unknown token)

.class public MyClass
.super java/lang/Object

.method public static main([Ljava/lang/String;)V trailing_tokens

     unknown_token ; <- still reported after recovery

.class_end
----- STDERR -----
[E-017] Error: unexpected identifier method body
   ╭─[ test_data/rns_integration/error/parser/method_directive/trailing_tokens_recovers.rns:9:6 ]
   │
 9 │      unknown_token ; <- still reported after recovery
   │      ──────┬──────  
   │            ╰──────── unexpected token
   │ 
   │ Help: Check the syntax of the method body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-017
───╯
----- JAVAP -----
not generated
